--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
 
   cached_network_image: ^3.2.3
   intl: ^0.18.1
+  assets_audio_player: ^3.0.6
+
+  audio_video_progress_bar: ^1.0.1
+  volume_controller: ^2.0.7
   
 
 dev_dependencies:
