--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
 
   audio_video_progress_bar: ^1.0.1
   volume_controller: ^2.0.7
+
+  flutter_spinkit: ^5.2.0
+  readmore: ^2.2.0
   
 
 dev_dependencies:
@@ -74,8 +77,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+#  assets:
+#    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
