--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,10 @@ dependencies:
 
   flutter_spinkit: ^5.2.0
   readmore: ^2.2.0
+
+  shared_preferences: ^2.1.2
+  shimmer_animation: ^2.1.0+1
+
   
 
 dev_dependencies:
@@ -64,6 +68,17 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.3.1
+
+flutter_launcher_icons:
+    android: "launcher_icon"
+    ios: true
+    image_path: "assets/logo.png"
+
+flutter_native_splash:
+  color: "#FFFFFF"
+  image: assets/logo.png
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
