--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
 
   audio_video_progress_bar: ^1.0.1
   volume_controller: ^2.0.7
+  flutter_volume_controller: ^1.2.7
 
   flutter_spinkit: ^5.2.0
   readmore: ^2.2.0
