--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,12 @@ dependencies:
   responsive_sizer: ^3.1.1
   infinite_scroll_pagination: ^3.2.0
   glassmorphism: ^3.0.0
+
   dio: ^5.2.1+1
+  html: ^0.15.4
+
+  audioplayers: ^4.1.0
+
   provider: ^6.0.5
 
   cached_network_image: ^3.2.3
